Replace from litecoin to blackcoin terms

--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -104,7 +104,7 @@
 
           This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit (http://www.openssl.org/) and cryptographic software written by Eric Young (eay@cryptsoft.com) and UPnP software written by Thomas Bernard.
 
-          Offical forum: http://forum.litecoin.net/
+          Offical forum: http://forum.blackcoin.net/
         </string>
        </property>
        <property name="wordWrap">
