--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>About Litecoin</string>
+   <string>About Blackcoin</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
@@ -50,7 +50,7 @@
           <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="text">
-          <string>&lt;b&gt;Litecoin&lt;/b&gt; version</string>
+          <string>&lt;b&gt;Blackcoin&lt;/b&gt; version</string>
          </property>
          <property name="textInteractionFlags">
           <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
@@ -96,7 +96,7 @@
        <property name="text">
         <string>
           Copyright © 2009-2012 Bitcoin Developers
-          Copyright © 2011-2012 Litecoin Developers
+          Copyright © 2011-2012 Blackcoin Developers
 
           This is experimental software.
 
